Add Vite tooling and fix template literal for frontend

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,5 +6,8 @@
   "scripts": {
     "dev": "vite"
   },
-  "dependencies": {}
+  "dependencies": {},
+  "devDependencies": {
+    "vite": "^5.2.0"
+  }
 }
