--- a/backend/.env.sample
+++ b/backend/.env.sample
@@ -12,5 +12,8 @@ POLL_INTERVAL=120
 REPLY_IMPORTANCE_THRESHOLD=0.6
 REPLY_NEEDED_THRESHOLD=0.6
 
+# Optional overrides
+# GOOGLE_GENAI_MODEL=gemini-1.5-pro
+
 # CORS
 CORS_ORIGINS=http://localhost:5173
