--- a/backend/.env.sample
+++ b/backend/.env.sample
@@ -13,7 +13,7 @@ REPLY_IMPORTANCE_THRESHOLD=0.6
 REPLY_NEEDED_THRESHOLD=0.6
 
 # Optional overrides
-# GOOGLE_GENAI_MODEL=gemini-1.5-pro
+# GOOGLE_GENAI_MODEL=gemini-2.5-flash
 
 # CORS
 CORS_ORIGINS=http://localhost:5173
