Fix user name regex for phrase detection

--- a/backend/.env.sample
+++ b/backend/.env.sample
@@ -12,6 +12,10 @@ POLL_INTERVAL=120
 REPLY_IMPORTANCE_THRESHOLD=0.6
 REPLY_NEEDED_THRESHOLD=0.6
 
+# Optional context for the classifier
+# INBOX_OWNER_NAME=Your Name
+# INBOX_OWNER_ALIASES=Nickname,Initials
+
 # Optional overrides
 # GOOGLE_GENAI_MODEL=gemini-2.5-flash
 
